Refactor: 오늘 진료목록 조회 API 수정 (#48)
진료완료와 진료예정을 구분하여 데이터를 반환하도록 수정했다.